Correct cell wrapping

--- a/ui/mods/section_of_foreign_intelligence/section_of_foreign_intelligence.css
+++ b/ui/mods/section_of_foreign_intelligence/section_of_foreign_intelligence.css
@@ -45,7 +45,7 @@
 .section_of_foreign_intelligence .table {
    display: table;
    table-layout: fixed;
-   width: 70%;
+   width: 80%;
 }
 .section_of_foreign_intelligence .tablebody {
    display: table-row-group;
